# SCPNet

./: .gitignore  README.md  pyproject.toml  requirements.txt
ultralytics/SCPNet/: CDSAM.py  SEM.py  SFCAM.py
ultralytics/cfg/models/SCPNet/: SCPNet-yolo12s.yaml
ultralytics/nn/: tasks.py
